Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "travel_month = None"
+    "travel_month = 'January'"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = 'January' # \"January\""
+    "travel_month = # \"January\""
    ]
   },
   {
